         peripheral changes (Stuart).
20130518 ui/widget/options.pl: update peripherals list when a machine reset is
         not needed (Sergio).
20130519 ui/widget/{query.c,widget.c,widget_internals.h}: display confirmation
         messages (Stuart).
20130519 ui/widget/{options.pl,query.c}: choose no/cancel upon pressing escape
         for all all confirmation dialogues, and remove workaround for this
         from peripheral reset confirmation dialogue (Stuart).
20130519 ui/{gtk/gtkui.c,widget/menu.c,win32/win32ui.c}: use different
         confirmation messages for hard and soft resets (Stuart).
20130519 AUTHOR,man/fuse.1: Add Sergio Baldoví (Stuart).
20130519 lib/Makefile.am: distribute tests/success.{mgt.bz2,opd} (Stuart).
20130519 Makefile.am,hacking/Makefile.am,sound/Makefile.am,ui/wii/Makefile.am:
         distribute PORTING,hacking/valgrind.supp,sound/wiisound.c,
         ui/wii/wiimouse.h (Stuart).
20130526 Makefile.am,ui/win32/installer/fuse.nsi.in: distribute ChangeLog and
         build notes in Windows packages (Sergio).
20130527 pokefinder/pokemem.c: fix crash when opening a file without extension
         (patch #312) (UB880D and Sergio).
20130531 man/fuse.1: correct Spectranet initialisation script (thanks, Guesser)
         (Fred).
20130531 man/fuse.1: add missing documentation (fixes bug #282) (Stuart).
20130531 ui/win32/installer/fuse.nsi.in: adding Fuse to the OpenWith list for
         file extensions could result in a true association under some
         circumstances on Windows 7 (thanks, Alessandro Grussu) (Sergio).
20130603 sound/aosound.c: remove warnings (mostly patch #313) (Rene Ladan).
20130603 ui/widget/menu.c: (bodge) fix warning.
20130605 roms/se-1.rom: fix save tape traps with SE ROM (Andrew Owen and Fred).
20130617 fuse.c: don't ignore the return code from setuid() (Sergio).
20130706 configure.ac: fix condition used in --with-desktop-dir option
         (thanks, wiz) (Sergio).